Added one more search engine in web app

--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -19,14 +19,14 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link active" href="/list">All Games</a>
+                  </li> -->
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/unsplashSearch">Unsplash Image</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/search">Image</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">About</a>
+                    <a class="nav-link active" href="/pixabaySearch">Pixabay Image</a>
                   </li>
                 </ul>
 
